Messages to database

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 	<form action="/chat" method="POST" id="tForm">
 		<input type="hidden" name="token" id="token" value="">
 	</form>
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(()=>{
 			$('#b').click(()=>{
